--- a/_config.html
+++ b/_config.html
@@ -67,7 +67,7 @@
 
   <header>
     <h1>👋 สวัสดีครับ ผม maoa</h1>
-    <p>นักพัฒนาที่ชอบ Automation, Programming, และ PLC</p>
+    <p>นักพัฒนาที่ชอบ Automation, Programming, และ PLC</p>https://mutodeiei.github.io/
   </header>
 
   <section>
